# LintasMemori

./: .dockerignore  .gitignore  README.md  docker-compose.yml  start-all.cmd  start_all.py  stop-all.cmd  stop_all.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
apps/web/src/components/: AdvancedDrawer.tsx  AlbumTree.tsx  AppShell.tsx  DrawerPanel.tsx  ExplorerToolbar.tsx  MediaView.tsx  PipelineWizardDrawer.tsx  PreviewConfirmModal.tsx  SelectionActionBar.tsx  (+5 more)
docker/: Dockerfile
scripts/: start-all.ps1  stop-all.ps1
services/api/: pyproject.toml
services/api/app/: action_service.py  advanced_service.py  auth_store.py  config.py  cookies.py  database.py  explorer_service.py  file_utils.py  gphotos_rpc.py  gptk_ops.py  gptk_parser.py  gptk_service.py  job_executor.py  job_store.py  main.py  models.py  operation_catalog.py  operation_safety.py  pipeline_service.py  schemas.py  serializers.py  upload_service.py
services/api/app/adapters/: __init__.py  common.py  gp_disguise_adapter.py  gpmc_adapter.py  gptk_adapter.py  gptk_methods.py
services/api/app/routes/: __init__.py  accounts.py  health.py  jobs.py  operations.py
services/api/app/routes_v2/: __init__.py  accounts.py  actions.py  advanced.py  explorer.py  jobs.py  pipeline.py  uploads.py
services/api/lintasmemori_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/gptk-sidecar/: package-lock.json  package.json  tsconfig.json
services/gptk-sidecar/src/: index.ts
workers/python/: worker.py
(+10 files in other folders)
