[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lintasmemori-api"
version = "0.1.0"
description = "LintasMemori API"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
]

[tool.setuptools]
packages = ["app"]
